--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -939,6 +939,10 @@ html {
   transform-origin: top !important;
 }
 
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
 .cursor-pointer {
   cursor: pointer !important;
 }
